some testing changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.cloud.config.import-check.enabled=false
 
 limits-service.minimum=99  
 limits-service.maximum=9999
+limits-service.gap=32
+limits-service.jpg=33
+limits-service.jgp=34
